﻿PERQemu "experiments" branch ChangeBlog


Summary of changes on the development branch since the v0.6.5 interim release.
Previous notes moved to ChangeLog-Old.txt.


April, 2025:

    6. Oh bloody hell.  Missed one small fix to the MFM/Microp disk controllers.
    The BOOT ROM tells the disk controller to ship the normal two quad words for
    the logical header but sets the high address bits so the buffer will always
    end up in high memory regardless of what size board is installed -- and then
    ignores the header bytes anyway.  Ugh.  The disk hardware/state machine must
    rely on always sending those two quads even though the DMA hardware could be
    programmed to skip it by changing ONE CONSTANT in the microcode, but ANYWAY
    it means we take out the range check and just let our Memory implementation
    wrap the address, like the hardware do.  Gotta love it, warts and all.

    5. Small Ethernet bug fix when fetching the machine's MAC address.  Update
    the UserGuide for the pending release.  Update some of the older disk images
    (re-enable network servers in Accent S4, e.g.) and some final fiddling about
    before pushing this thing out of the nest.  Bump to v.0.7.5!

    4. Updated and added more disk images.  MOAR! DISK! IMAGES!  These are a
    bit thrown together and there's still a bazillion floppies and tapes to go
    through to assemble new apps/games/demos/sources/etc, but at least now I've
    bundled some PERQ-2/8" Microp and PERQ-2/Tx 5.25"/MFM images to start with.
    See the ReadMe/UserGuide for additional info.

    Also, more fiddling with RasterOp, resulting (on my ancient creaky Mac) in
    a blistering .5fps average increase in refresh rate.  Worth it. :-P

    3. Some corrections to the MFM and Micropolis hard disk controllers to fix
    a regression and clarify some strange boot-time behavior.  Correct a small
    Configurator bug that was preventing saved configurations from loading at